src/objects/BMCServiceDesk__SLA_Milestone_Incident_Txn_History__c.object
<CustomObject>
    <description>Stores the incident milestones that are achieved or canceled for a service transaction.</description>
    <fields>
        <fullName>BMCServiceDesk__Action_Performed__c</fullName>
        <description>Action Performed by the milestone transaction.
Example: Sent Email notification to: TO / CC values
&lt;Actual Email&gt;</description>
        <label>Action Performed</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Error__c</fullName>
        <label>Error</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident_Service_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Service Target</label>
        <referenceTo>BMCServiceDesk__Incident_Service_Target__c</referenceTo>
        <relationshipName>SLA_Milestone_Incident_Transact_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipName>SLA_Milestone_Incident_Transact_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Milestone_Condition__c</fullName>
        <description>SLA Milestone conditions picklist</description>
        <label>SLA Milestone Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage of Time Elapsed</fullName>
                </value>
                <value>
                    <fullName>Percentage of Time Remaining</fullName>
                </value>
                <value>
                    <fullName>Service Target is Canceled</fullName>
                </value>
                <value>
                    <fullName>Service Target is Met</fullName>
                </value>
                <value>
                    <fullName>Service Target is Missed</fullName>
                </value>
                <value>
                    <fullName>Service Target Warning Occurs</fullName>
                </value>
                <value>
                    <fullName>Time Elapsed</fullName>
                </value>
                <value>
                    <fullName>Time Remaining</fullName>
                </value>
                <value>
                    <fullName>Percent of Time Elapsed</fullName>
                </value>
                <value>
                    <fullName>Percent of Time Remaining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA_Milestone_Value__c</fullName>
        <description>SLA Milestone Value</description>
        <label>SLA Milestone Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <description>SLA Milestone transaction status. Whether successfully executed - &quot;PASS&quot; or exception occured &quot;FAIL&quot;.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SLA Milestone Incident History</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__Action_Performed__c</columns>
        <columns>BMCServiceDesk__Error__c</columns>
        <columns>BMCServiceDesk__FKIncident__c</columns>
        <columns>BMCServiceDesk__FKIncident_Service_Target__c</columns>
        <columns>BMCServiceDesk__SLA_Milestone_Condition__c</columns>
        <columns>BMCServiceDesk__SLA_Milestone_Value__c</columns>
        <columns>BMCServiceDesk__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Incident History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>